--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,25 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-color: 0, 0, 0;
+  --background-light: 0, 0, 0;
+  --background-dark: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-color: 0, 0, 0;
+    --background-light: 0, 0, 0;
+    --background-dark: 0, 0, 0;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground-color));
+  background: linear-gradient(180deg, rgba(var(--background-light), 1) 0%, rgba(var(--background-dark), 1) 100%);
+}
+
+.bg-light {
+  background-color: rgb(var(--background-light));
+}
+
+.bg-dark {
+  background-color: rgb(var(--background-dark));
 }
